# Five-o-Clock-Caves

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: mainStageBackup.txt
res/scenes/: Save1.xml  Save2.xml  Save3.xml  Save4.xml  Save5.xml  lvl1.xml  lvl2.xml  lvl3.xml
res/shaders/: 1.model_loading.fs  animation.fs  animation.vs  animationFresnel.fs  animationNew.fs  box.gs  button.fs  button.vs  color.fs  color.vs  colorFresnel.fs  debugQuad.fs  default.fs  default.vs  defaultNoLights.fs  depth.vs  depthAnim.fs  depthAnim.vs  fb_screen.fs  forGeometry.fs  forGeometry.vs  light.fs  sphere.gs  sprite.vs  text.fs  worldTextures.fs  worldTextures.vs
src/: CMakeLists.txt  main.cpp
src/Animation/: AnimatedMesh.h  AnimatedModel.cpp  AnimatedModel.h  Animation.h  Animator.h  Bone.h  Joint.cpp  Joint.h
src/Component/: ActionBase.cpp  ActionBase.h  ActionBox.cpp  ActionBox.h  ActionCog.cpp  ActionCog.h  ActionDoor.cpp  ActionDoor.h  ActionLever.cpp  ActionLever.h  ActionMesh.cpp  ActionMesh.h  AllPlayers.cpp  AllPlayers.h  AnimatedMeshRenderer.cpp  AnimatedMeshRenderer.h  AnimatorComponent.cpp  AnimatorComponent.h  BoundingSphere.cpp  BoundingSphere.h  BoxCollider.cpp  BoxCollider.h  BoxController.cpp  BoxController.h  CameraController.cpp  CameraController.h  Component.cpp  Component.h  Death.cpp  Death.h  DirLight.cpp  DirLight.h  DoorInteract.cpp  DoorInteract.h  GooldDoorInteract.cpp  GooldDoorInteract.h  Interactable.cpp  Interactable.h  Intro.cpp  Intro.h  (+42 more)
src/Core/: AudioManager.cpp  AudioManager.h  CollisionManager.cpp  CollisionManager.h  GameObject.h  (+12 more)
(+75 files in other folders)
